# paquet

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  clean.sh  main.cpp  run.sh
application/: copyStaticAssets.ts  package-lock.json  package.json  run-server.bat  run-server.sh  tsconfig.json
application/server/: server.ts  start.ts
application/server/routes/: index-route.ts
application/server/types/: builtin.d.ts
application/server/views/: index.hbs  layout.hbs
child/: child.cpp
codelib/: codelib.cpp  codelib.h
core/: run.sh
core/child/: child.cpp
core/codelib/: codelib.cpp  codelib.h
core/shared/: string-utilities.h
core/supervisor/: assembler.h  codecave.cpp  dll.h  injector.h  interceptor.cpp  interceptor.h  process.h  typedef.h  util.cpp
shared/: macros.h  string-utilities.cpp
supervisor/: assembler.cpp  assembler.h  codecave.cpp  codecave.h  dll.cpp  injector.cpp  injector.h  interceptor.cpp  interceptor.h  process.cpp  process.h  runtime-exception.cpp  runtime-exception.h  util.cpp  util.h
